syntax = "proto3";
option go_package = ".";

message User{string id = 1; string email = 2; string password = 3;}

service AuthService{
  rpc Register(RegisterReq) returns(RegisterRes){}
  rpc Login(LoginReq) returns(LoginRes){}
  rpc Validate(ValidateReq) returns(ValidateRes){}
}

//Register
message RegisterReq{string email = 1; string password = 2;}
message RegisterRes{string status = 1;}

//Login
message LoginReq{string email = 1; string password = 2;}
message LoginRes{string status = 1; string token = 2;}

//Validate
message ValidateReq{string token = 1;}
message ValidateRes{string status = 1;}